--- a/sass/style.scss
+++ b/sass/style.scss
@@ -733,15 +733,10 @@
     .container {
         header {
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 0px 0px;
 
             nav {
                 width: 100%;
-                padding: 0px 0px;
+                padding: 0px 20px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -764,6 +759,10 @@
                     width: 100%;
                     height: 400px;
                     padding: 30px 30px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
 
                     .card-one {
                         .h1 {
@@ -804,11 +803,11 @@
             .big-card {
                 width: 100%;
                 display: flex;
-                flex-direction: column;
-                align-items: baseline;
+                align-items:center;
                 justify-content: center;
-                margin-top: 500px;
+                margin-top: 550px;
                 margin-bottom: -570px;
+                // padding:0px 48px;
 
                 .card-one {
                     width: 100%;
@@ -887,22 +886,25 @@
             }
 
             nav {
-                margin-top: 600px;
+                margin-top:1300px;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                height: 1850px;
+                height:1050px;
                 padding: 15px 0px;
                 width: 100%;
                 background-color: black;
-                gap: 100px;
+                gap:900px;
 
                 .cards {
                     width: 100%;
                     flex-direction: column;
-                    margin-top: -1050px;
-                    height: 1560px;
+                    margin-top:-1300px;
                     transition: 2s;
+                    padding:0px 0px;
+                    margin-bottom:-250px;
+                    align-items: center;
+                    justify-content: center;
 
                     &:hover {
                         transform: scale(102%);
@@ -922,7 +924,6 @@
 
                     .card-two {
                         width: 100%;
-                        padding: 0px 0px;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -930,17 +931,20 @@
                         border-radius: 0px 0px 0px 0px;
 
                         .card {
-                            padding: 0px 0px;
+                            width: 100%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
 
                             .card-three {
                                 input {
-                                    width: 460px;
+                                    width:480px;
                                 }
                             }
 
                             #card-four {
                                 input {
-                                    width: 460px;
+                                    width:480px;
                                 }
                             }
                         }
