--- a/css/style.css
+++ b/css/style.css
@@ -797,12 +797,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0px 10px;
   }
   .container footer nav .cards .card-two .card .card-three input {
-    width: 480px;
+    width: 100%;
+    height: 50px;
+    padding: 0px 230px 0px 15px;
   }
   .container footer nav .cards .card-two .card #card-four input {
-    width: 480px;
+    width: 100%;
+    height: 100px;
+    padding: 0px 230px 50px 15px;
   }
   .container footer nav .cards-two {
     display: flex;
