--- a/sass/style.scss
+++ b/sass/style.scss
@@ -935,16 +935,21 @@
                             display: flex;
                             align-items: center;
                             justify-content: center;
+                            padding:0px 10px;
 
                             .card-three {
                                 input {
-                                    width:480px;
+                                    width:100%;
+                                    height:50px;
+                                    padding:0px 230px 0px 15px;
                                 }
                             }
 
                             #card-four {
                                 input {
-                                    width:480px;
+                                    width:100%;
+                                    height:100px;
+                                    padding:0px 230px 50px 15px;
                                 }
                             }
                         }
