--- a/css/style.css
+++ b/css/style.css
@@ -797,12 +797,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0px 10px;
+  }
+  .container footer nav .cards .card-two .card .card-three {
+    width: 100%;
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .container footer nav .cards .card-two .card .card-three label {
+    padding-right: 280px;
   }
   .container footer nav .cards .card-two .card .card-three input {
     width: 100%;
     height: 50px;
     padding: 0px 230px 0px 15px;
+  }
+  .container footer nav .cards .card-two .card #card-four {
+    width: 100%;
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .container footer nav .cards .card-two .card #card-four label {
+    padding-left: 20px;
+    display: flex;
   }
   .container footer nav .cards .card-two .card #card-four input {
     width: 100%;
