--- a/sass/style.scss
+++ b/sass/style.scss
@@ -803,7 +803,7 @@
             .big-card {
                 width: 100%;
                 display: flex;
-                align-items:center;
+                align-items: center;
                 justify-content: center;
                 margin-top: 550px;
                 margin-bottom: -570px;
@@ -886,23 +886,23 @@
             }
 
             nav {
-                margin-top:1300px;
+                margin-top: 1300px;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                height:1050px;
+                height: 1050px;
                 padding: 15px 0px;
                 width: 100%;
                 background-color: black;
-                gap:900px;
+                gap: 900px;
 
                 .cards {
                     width: 100%;
                     flex-direction: column;
-                    margin-top:-1300px;
+                    margin-top: -1300px;
                     transition: 2s;
-                    padding:0px 0px;
-                    margin-bottom:-250px;
+                    padding: 0px 0px;
+                    margin-bottom: -250px;
                     align-items: center;
                     justify-content: center;
 
@@ -935,21 +935,43 @@
                             display: flex;
                             align-items: center;
                             justify-content: center;
-                            padding:0px 10px;
 
                             .card-three {
+                                width: 100%;
+                                padding: 0px 20px;
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+
+                                label {
+                                    padding-right: 280px;
+                                }
+
                                 input {
-                                    width:100%;
-                                    height:50px;
-                                    padding:0px 230px 0px 15px;
+                                    width: 100%;
+                                    height: 50px;
+                                    padding: 0px 230px 0px 15px;
                                 }
                             }
 
                             #card-four {
+                                width: 100%;
+                                padding: 0px 20px;
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+
+                                label {
+                                    padding-left:20px;
+                                    display: flex;
+                                }
+
                                 input {
-                                    width:100%;
-                                    height:100px;
-                                    padding:0px 230px 50px 15px;
+                                    width: 100%;
+                                    height: 100px;
+                                    padding: 0px 230px 50px 15px;
                                 }
                             }
                         }
