--- a/sass/style.scss
+++ b/sass/style.scss
@@ -945,6 +945,8 @@
                                 justify-content: center;
 
                                 label {
+                                    display: flex;
+                                    gap: 5px;
                                     padding-right: 280px;
                                 }
 
@@ -964,8 +966,9 @@
                                 justify-content: center;
 
                                 label {
-                                    padding-left:20px;
+                                    padding-left: 20px;
                                     display: flex;
+                                    gap: 5px;
                                 }
 
                                 input {
