--- a/sass/style.scss
+++ b/sass/style.scss
@@ -941,19 +941,19 @@
                                 padding: 0px 20px;
                                 display: flex;
                                 flex-direction: column;
-                                align-items: center;
+                                // align-items: center;
                                 justify-content: center;
 
                                 label {
                                     display: flex;
                                     gap: 5px;
-                                    padding-right: 280px;
+                                    padding-left:20px;
                                 }
 
                                 input {
                                     width: 100%;
                                     height: 50px;
-                                    padding: 0px 230px 0px 15px;
+                                    padding: 0px 100px 0px 15px;
                                 }
                             }
 
@@ -962,11 +962,11 @@
                                 padding: 0px 20px;
                                 display: flex;
                                 flex-direction: column;
-                                align-items: center;
+                                // align-items: center;
                                 justify-content: center;
 
                                 label {
-                                    padding-left: 20px;
+                                    padding-left:20px;
                                     display: flex;
                                     gap: 5px;
                                 }
@@ -974,7 +974,7 @@
                                 input {
                                     width: 100%;
                                     height: 100px;
-                                    padding: 0px 230px 50px 15px;
+                                    padding: 0px 150px 50px 15px;
                                 }
                             }
                         }
